azure/modules/vpc/azure-security.tf
resource "azurerm_network_security_group" "cncf" {
  name                = "${ var.name }"
  location            = "${ var.location }"
  resource_group_name = "${ var.name }"

  }
